Form to add new taxon not in the database (#1761)
* Add a button to add new taxon

* Add new taxon if not exist

* Improve the layout

* Variable as a dictionary key

--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -16,7 +16,7 @@
 
     <link href="{% static "css/base.css" %}" rel="stylesheet">
     <link href="{% static "css/navbar.css" %}" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Alegreya:400,400i,500,500i,700,700i|Roboto+Condensed:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400i,500,500i,700,700i|Roboto+Condensed:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
 
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ GOOGLE_ANALYTIC_KEY }}"></script>
@@ -33,6 +33,7 @@
 
     <script src="{% static 'js/non_requirejs/cookies.js' %}"></script>
     <script src="{% static 'js/non_requirejs/site_notice.js' %}"></script>
+    <script src="{% static 'js/utils/font_awesome_icons.js' %}"></script>
     {% block head %} {% endblock %}
 
 </head>
