--- a/bims/static/css/site_form.css
+++ b/bims/static/css/site_form.css
@@ -73,3 +73,19 @@ label.error {
 .ol-control-selected:hover button {
     background-color: rgba(0,60,136,.7);
 }
+
+.site-form-close {
+    float: right;
+    font-size: 20pt;
+    background-color: #526B43;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: #ffffff;
+    margin-bottom: 5px;
+}
+
+.site-form-close:hover {
+    cursor: pointer;
+    color: #526B43;
+    background-color: #ffffff;
+}
