--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -53,6 +53,10 @@
                 {% if location_site_code %}{{ location_site_code }} {% else %}
                     {{ location_site_name }}{% endif %}
                 </span>
+
+                <div class="site-form-close">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </div>
             </div>
             <div class="alert alert-danger" role="alert"
                  style="display: none;">
@@ -151,7 +155,7 @@
                 </div>
                 <div class="update-taxon-container col-sm-2">
                     <button id="fetch-geomorphological-zone" type="button"
-                            class="btn btn-default" disabled>
+                            class="btn btn-default" style="width: 250px;" disabled>
                         Fetch data
                     </button>
                 </div>
