--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -1,6 +1,7 @@
 {% extends 'main_base.html' %}
 {% load jsonify %}
 {% load static from staticfiles %}
+{% load thumbnail %}
 
 {% block subtitle %}
     Single Site Dashboard - SASS
@@ -265,11 +266,15 @@
                                     {% for image in site_image %}
                                         {% if forloop.counter0 == 0 %}
                                             <div class="carousel-item active">
-                                                <img class="d-block w-100" src="{{ image.image.url }}" style="width:100%;">
+                                            {% thumbnail image.image "x500" crop="center" as im %}
+                                                <img src="{{ im.url }}">
+                                            {% endthumbnail %}
                                             </div>
                                         {% else %}
                                             <div class="carousel-item">
-                                                <img class="d-block w-100" src="{{ image.image.url }}" style="width:100%;">
+                                                {% thumbnail image.image "x500" crop="center" as im %}
+                                                    <img src="{{ im.url }}">
+                                                {% endthumbnail %}
                                             </div>
                                         {% endif %}
                                     {% endfor %}
