Fix download html element

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -326,7 +326,7 @@
                             Overview
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
-                                data-datac="ssdd-overview-wrapper">
+                                data-datac="ssdd-overview-wrapper" data-title="Site Overview">
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
