--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -102,7 +102,19 @@
                 {% if is_update %}
                 <div class="form-group">
                     <label for="data-source" class="input-label">Source Reference :</label>
-                    <div style="white-space: nowrap; overflow: auto;">{{ source_reference }}</div>
+                    {% if source_reference %}
+                        <div style="font-weight: bold">{{ source_reference.reference_type }}</div>
+                        {% if source_reference.reference_type == 'Published report or thesis' %}
+                            <div>{{ source_reference.source.bimsdocument.author }}, {{ source_reference.source.bimsdocument.year }}, {{ source_reference.source.title }}</div>
+                        {% elif source_reference.reference_type == 'Peer-reviewed scientific article' %}
+                            <div>{{ source_reference }}</div>
+                            {% if source_reference.source.doi %}
+                                <div>DOI : {{ source_reference.source.doi }}</div>
+                            {% endif %}
+                        {% else %}
+                            <div>{{ source_reference }}</div>
+                        {% endif %}
+                    {% endif %}
                     <div><small class="text-muted">To update this value, click the next button to go to the Source Reference form</small></div>
                 </div>
                 <div class="form-group">
