Update chemical record charts view

--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -368,6 +368,9 @@
                     {% endif %}
 
                     <div class="vertical-space"></div>
+
+                </div>
+                <div class="col-md-12">
                     <div class="table-container">
                         <div class="table-title">
                             Metadata Table
