Fix ecoregion view in site panel

--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -233,8 +233,12 @@
             <div class="col-4 value-column"><%= geomorphological_zone %></div>
         </div>
         <div class="row">
-            <div class="col-8 caption-column">SA Ecological Region level 1</div>
+            <div class="col-8 caption-column">SA Ecoregion level 1</div>
             <div class="col-4 value-column"><%= ecological_region %></div>
+        </div>
+        <div class="row">
+            <div class="col-8 caption-column">SA Ecoregion level 2</div>
+            <div class="col-4 value-column"><%= ecological_region_2 %></div>
         </div>
         <div class="row">
             <div class="col-8 caption-column">River</div>
