--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -8,11 +8,18 @@
 {% block head %}
 
     <!-- Custom styles for this template -->
+    <link href="{% static "js/libs/openlayers-4.6.4/ol.css" %}"
+          rel="stylesheet">
     <link href="{% static "css/form_page.css" %}" rel="stylesheet">
     <link href="{% static "css/jquery.timepicker.min.css" %}" rel="stylesheet">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script type="text/javascript">
         var isUpdate = {% if is_update %}true{% else %}false{% endif %};
+        const location_site_lat = '{{ location_site_lat }}';
+        const location_site_lon = '{{ location_site_lon }}';
+        const geoserverPublicUrl = '{{ geoserver_public_location }}';
+        const locationSiteGeoserverLayer = '{{ bims_preferences.geoserver_location_site_layer }}';
+        const defaultWMSSiteParameters = '{{ preferences.SiteSetting.default_location_site_cluster }}'
     </script>
 
 {% endblock %}
@@ -28,23 +35,131 @@
             {{ alert | safe }}
         </div>
         {% endif %}
+
         <div class="row">
         <div class="col-lg-9">
         {% if is_update %}
             <h2>Update SASS record </h2>
         {% else %}
-            <h2>Add SASS record</h2>
+            <h2>Add SASS record for site {{ site_code }}</h2>
         {% endif %}
         </div>
         <div class="site-code col-lg-3" style="margin-top: 0 !important;">
             <div class="sass-form-close-container">
                 <div class="sass-form-close"><i class="fa fa-times" aria-hidden="true"></i></div>
             </div>
-            Site code/name : {{ site_code }}
         </div>
         </div>
+
+        <div id="site-map"></div>
+
+        <div class="form-group row">
+            <label for="date"
+                   class="col-sm-1 col-form-label col-form-label">Latitude</label>
+            <input type="text" id="latitude" name="latitude"
+                   class="col-sm-2 form-control form-control-sm"
+                   value="{{ location_site_lat }}" disabled>
+            <label for="date"
+                   class="col-sm-1 col-form-label col-form-label">Longitude</label>
+            <input type="text" id="longitude" name="longitude"
+                   class="col-sm-2 form-control form-control-sm"
+                   value="{{ location_site_lon }}" disabled>
+        </div>
+
+        <div class="separator-line"></div>
+
+        <div class="form-group row">
+            <label for="date"
+                   class="col-sm-2 col-form-label col-form-label required-text">Date</label>
+            <div class="col-sm-10">
+                <input type="text" name="date"
+                       class="form-control form-control-sm"
+                       id="date" placeholder="" {% if date %} value="{{ date|date:'m/d/Y' }}" {% endif %} required>
+                <div class="invalid-feedback">
+                    Please provide a valid date
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group row even-row">
+            <label for="date"
+                   class="col-sm-2 col-form-label col-form-label required-text">Owner</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control form-control-sm"
+                       onClick="this.setSelectionRange(0, this.value.length)"
+                       id="owner" placeholder="" name="owner" value="{% if owner.get_full_name %}{{ owner.get_full_name }}{% else %}{{ owner.username }}{% endif %}"
+                       required>
+                <small class="form-text text-muted">Please select the
+                    Owner, if you are the data capturer and not the
+                    Owner</small>
+                <input type="hidden" id="owner_id" name="owner" {% if owner %} value="{{ owner.id }}" {% endif %}>
+                <div class="invalid-feedback">
+                    Please provide a owner
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-10" style="padding-left: 35px;">
+                <input class="form-check-input" type="radio" {% if accredited %} checked {% endif %} id="accredited" name="accredited">
+                <label class="form-check-label" for="accredited" style="padding-top: 10px;">
+                    Accredited at the time of collection
+                </label>
+            </div>
+        </div>
+
+        {% if is_update %}
+            <div class="form-group row">
+                <label for="data-source" class="col-sm-2">Source Reference</label>
+                <div class="col-sm-10">
+                    <div class="source-reference-wrapper">
+                        {% if source_reference %}
+                            <div style="font-weight: bold">{{ source_reference.reference_type }}</div>
+                            {% if source_reference.reference_type == 'Published report or thesis' %}
+                                <div>{{ source_reference.source.bimsdocument.author }},
+                                    {{ source_reference.source.bimsdocument.year }},
+                                    {{ source_reference.source.title }}</div>
+                            {% elif source_reference.reference_type == 'Peer-reviewed scientific article' %}
+                                <div>{{ source_reference }}</div>
+                                {% if source_reference.source.doi %}
+                                    <div>DOI : {{ source_reference.source.doi }}</div>
+                                {% endif %}
+                            {% else %}
+                                <div>{{ source_reference }}</div>
+                            {% endif %}
+                        {% endif %}
+                    </div>
+                    <div><small class="text-muted">To update this value, click the
+                        next button to go to the Source Reference form</small>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="data-source" class="col-sm-2">Site Image</label>
+                <div class="col-sm-10">
+                    <input type="file" class="form-control" style="height: 43px !important;"
+                           name="site_image" accept="image/*">
+                    <br/><small class="error-upload"></small>
+                    <img id="site_image" class="site-image" src="{{ site_image.image.url }}" {% if site_image.image.url %} style="display: block" {% endif %}>
+                </div>
+            </div>
+        {% else %}
+            <div class="form-group row">
+                <label class="col-sm-2" for="data-source">Site Image</label>
+                <div class="col-sm-10">
+                    <div class="input-group input-file">
+                        <input type="file" class="form-control" name="site_image"
+                               accept="image/*" style="height: 43px !important;">
+                        <br/><small class="error-upload"></small>
+                    </div>
+                    <img id="site_image" src="" class="site-image">
+                </div>
+            </div>
+        {% endif %}
+
         <div class="row">
-            <div class="col-lg-9">
+            <div class="col-lg-12">
                 <table class="table table-sm">
                     <thead>
                     <tr>
@@ -81,59 +196,6 @@
                         {% endfor %}
                     </tbody>
                 </table>
-            </div>
-            <div class="col-lg-3">
-                <div class="form-group">
-                    <label for="date" class="input-label">Date (required) :</label>
-                    <input type="text" class="form-control" id="date" required name="date" {% if date %} value="{{ date|date:'m/d/Y' }}" {% endif %} >
-                </div>
-                <div class="form-group">
-                    <label for="owner" class="input-label">Owner :</label>
-                    <input type="text" class="form-control" id="owner" {% if owner %} value="{% if owner.first_name %}{{ owner.first_name }} {{ owner.last_name }}{% else %}{{ owner.username }}{% endif %}" {% endif %} >
-                    <small class="form-text text-muted">Please select the Owner, if you are the data capturer and not the Owner</small>
-                    <input type="hidden" id="owner_id" name="owner" {% if owner %} value="{{ owner.id }}" {% endif %}>
-                </div>
-                <div class="form-check form-group">
-                    <input class="form-check-input" type="radio" {% if accredited %} checked {% endif %} id="accredited" name="accredited">
-                    <label class="form-check-label" for="accredited" style="padding-top: 10px;">
-                        Accredited at the time of collection
-                    </label>
-                </div>
-                {% if is_update %}
-                <div class="form-group">
-                    <label for="data-source" class="input-label">Source Reference :</label>
-                    {% if source_reference %}
-                        <div style="font-weight: bold">{{ source_reference.reference_type }}</div>
-                        {% if source_reference.reference_type == 'Published report or thesis' %}
-                            <div>{{ source_reference.source.bimsdocument.author }}, {{ source_reference.source.bimsdocument.year }}, {{ source_reference.source.title }}</div>
-                        {% elif source_reference.reference_type == 'Peer-reviewed scientific article' %}
-                            <div>{{ source_reference }}</div>
-                            {% if source_reference.source.doi %}
-                                <div>DOI : {{ source_reference.source.doi }}</div>
-                            {% endif %}
-                        {% else %}
-                            <div>{{ source_reference }}</div>
-                        {% endif %}
-                    {% endif %}
-                    <div><small class="text-muted">To update this value, click the next button to go to the Source Reference form</small></div>
-                </div>
-                <div class="form-group">
-                    <label for="data-source" class="input-label">Site Image :</label>
-                    <img id="site_image" src="{{ site_image.image.url }}" style="width: 100%">
-                    <small class="text-muted">Upload new image: </small><input type="file" name="site_image" accept="image/*">
-                    <br/><small class="error-upload"></small>
-                </div>
-                {% else %}
-                    <div class="form-group">
-                        <label for="data-source" class="input-label">Site Image
-                            :</label>
-                        <img id="site_image" src="" style="width: 100%">
-                        <small class="text-muted">Upload new
-                            image: </small><input type="file" name="site_image"
-                                                  accept="image/*">
-                        <br/><small class="error-upload"></small>
-                    </div>
-                {% endif %}
             </div>
         </div>
 
@@ -314,6 +376,7 @@
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="{% static "js/libs/openlayers-4.6.4/ol.js" %}"></script>
     <script src="{% static "js/libs/jquery.timepicker.min.js" %}"></script>
     <script src="{% static "js/sass_form.js" %}"></script>
 
