--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -197,6 +197,22 @@
             </div>
             <div class="form-group row">
                 <label for="site_image" class="col-2 col-form-label">
+                    Abiotic Data
+                </label>
+                <div class="col-10">
+                    <ul class="list-group">
+                        {% for survey in surveys %}
+                        <li class="list-group-item d-flex justify-content-between align-items-center survey">
+                            {{ survey.date }}
+                            <span class="badge badge-primary badge-pill">Total abiotic data : {{ survey.chemical_record_count }}</span>
+                            <span><a href="/abiotic/?survey={{ survey.id }}&next=/location-site-form/update/?id={{ site_id }}"  class="btn btn-success">Update data</a></span>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="site_image" class="col-2 col-form-label">
                     Site Image
                 </label>
                 <div class="col-10">
